# mods-light-zmq

./: CMakeLists.txt  README.md  configuration.hpp  correspondencebank.cpp  descriptors_parameters.hpp  extract_features.cpp  extract_features_batch.cpp  imagerepresentation.cpp  imagerepresentation.h  io_mods.cpp  io_mods.h  mods-with-mask.cpp  mods.cpp  synth-detection.cpp  synth-detection.hpp
degensac/: CMakeLists.txt  DegUtils.c  Ftools.c  Htools.c  Htools.h  exp_ranF.c  exp_ranF.h  exp_ranH.c  exp_ranH.h  ranF.c  ranH.c  ranH2el.c
degensac/matutls/: ccmath.h
detectors/: CMakeLists.txt  detectors_parameters.hpp  helpers.cpp  helpers.h  structures.hpp
detectors/affinedetectors/: CMakeLists.txt  affine.cpp  affine.h  pyramid.cpp  scale-space-detector.cpp  scale-space-detector.hpp
detectors/mser/: CMakeLists.txt
detectors/mser/extrema/: extrema.cpp  extremaParams.h
detectors/saddle/: CMakeLists.txt  fast.cpp  fast.hpp  fast_score.cpp  lbq.cpp  lbq.h  saddlepts.cpp  sorb.cpp  sorb.h
inih/: CMakeLists.txt
libMatch/: CMakeLists.txt
libNumerics/: CMakeLists.txt
matching/: matching.cpp  matching.hpp  siftdesc.h
matutls/: CMakeLists.txt  ccmath.h  matconsts.c
